cabal-version: 2.2

category: Documentation
description: Monadoc provides better Haskell documentation.
extra-source-files: README.markdown
license-file: LICENSE.markdown
license: ISC
maintainer: Taylor Fausak
name: monadoc
synopsis: Better Haskell documentation.
version: 0.0.0.0

source-repository head
  location: https://github.com/tfausak/monadoc
  type: git

common library
  build-depends:
    base >= 4.14.0 && < 4.15
    , githash >= 0.1.4 && < 0.2
    , async >= 2.2.2 && < 2.3
    , bytestring >= 0.10.10 && < 0.11
    , Cabal >= 3.2.0 && < 3.3
    , containers >= 0.6.2 && < 0.7
    , cryptonite >= 0.26 && < 0.27
    , exceptions >= 0.10.4 && < 0.11
    , filepath >= 1.4.2 && < 1.5
    , ghc >= 8.10.1 && < 8.11
    , ghc-paths >= 0.1.0 && < 0.2
    , http-client >= 0.7.0 && < 0.8
    , http-client-tls >= 0.3.5 && < 0.4
    , http-types >= 0.12.3 && < 0.13
    , network-uri >= 2.6.3 && < 2.7
    , resource-pool >= 0.2.3 && < 0.3
    , sqlite-simple >= 0.4.18 && < 0.5
    , tar >= 0.5.1 && < 0.6
    , text >= 1.2.3 && < 1.3
    , time >= 1.9.3 && < 1.10
    , transformers >= 0.5.6 && < 0.6
    , wai >= 3.2.2 && < 3.3
    , warp >= 3.3.12 && < 3.4
    , zlib >= 0.6.2 && < 0.7
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-redundant-constraints
    -Wno-safe
    -Wno-unsafe

common executable
  import: library

  build-depends: monadoc
  ghc-options: -rtsopts -threaded -Wno-unused-packages

library
  import: library

  autogen-modules: Paths_monadoc
  exposed-modules:
    Monadoc
    Monadoc.Cabal
    Monadoc.Data.Commit
    Monadoc.Data.Migrations
    Monadoc.Data.Version
    Monadoc.Ghc
    Monadoc.Type.Binary
    Monadoc.Type.Config
    Monadoc.Type.Context
    Monadoc.Type.Etag
    Monadoc.Type.Migration
    Monadoc.Type.MigrationMismatch
    Monadoc.Type.Sha256
    Monadoc.Type.Size
    Monadoc.Type.Timestamp
    Monadoc.Type.Url
    Monadoc.Type.WithCallStack
  hs-source-dirs: src/lib
  other-modules: Paths_monadoc

executable monadoc
  import: executable

  hs-source-dirs: src/exe
  main-is: Main.hs

test-suite test
  import: executable

  build-depends: hspec >= 2.7.1 && < 2.8
  hs-source-dirs: src/test
  main-is: Main.hs
  other-modules:
    Monadoc.CabalSpec
    Monadoc.Data.CommitSpec
    Monadoc.Data.VersionSpec
    Monadoc.GhcSpec
    Monadoc.Type.BinarySpec
    Monadoc.Type.ConfigSpec
    Monadoc.Type.ContextSpec
    Monadoc.Type.EtagSpec
    Monadoc.Type.MigrationMismatchSpec
    Monadoc.Type.MigrationSpec
    Monadoc.Type.Sha256Spec
    Monadoc.Type.SizeSpec
    Monadoc.Type.TimestampSpec
    Monadoc.Type.UrlSpec
    Monadoc.Type.WithCallStackSpec
    MonadocSpec
  type: exitcode-stdio-1.0
