cabal-version: 2.2

name: monadoc
version: 0.2020.8.28
synopsis: Better Haskell documentation.
description: Monadoc provides better Haskell documentation.

category: Documentation
data-files:
  data/favicon.ico
  data/logo.png
  data/tachyons-4-12-0.css
extra-source-files: README.markdown
license-file: LICENSE.markdown
license: ISC
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/monadoc
  type: git

common library
  build-depends:
    base >= 4.14.0 && < 4.15
    , aeson >= 1.4.7 && < 1.6
    , async >= 2.2.2 && < 2.3
    , bytestring >= 0.10.10 && < 0.11
    , Cabal >= 3.2.0 && < 3.3
    , containers >= 0.6.2 && < 0.7
    , cookie >= 0.4.5 && < 0.5
    , cpphs >= 1.20.9 && < 1.21
    , cryptonite >= 0.27 && < 0.28
    , exceptions >= 0.10.4 && < 0.11
    , filepath >= 1.4.2 && < 1.5
    , ghc >= 8.10.1 && < 8.11
    , ghc-boot-th >= 8.10.1 && < 8.11
    , ghc-paths >= 0.1.0 && < 0.2
    , http-client >= 0.6.4 && < 0.8
    , http-client-tls >= 0.3.5 && < 0.4
    , http-types >= 0.12.3 && < 0.13
    , lucid >= 2.9.12 && < 2.10
    , network-uri >= 2.6.3 && < 2.7
    , random >= 1.1 && < 1.2
    , resource-pool >= 0.2.3 && < 0.3
    , sqlite-simple >= 0.4.18 && < 0.5
    , stm >= 2.5.0 && < 2.6
    , tar >= 0.5.1 && < 0.6
    , text >= 1.2.3 && < 1.3
    , time >= 1.9.3 && < 1.10
    , transformers >= 0.5.6 && < 0.6
    , uuid >= 1.3.13 && < 1.4
    , wai >= 3.2.2 && < 3.3
    , warp >= 3.3.12 && < 3.4
    , zlib >= 0.6.2 && < 0.7
  default-extensions: OverloadedStrings
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common executable
  import: library

  build-depends: monadoc
  ghc-options: -rtsopts -threaded -Wno-unused-packages

library
  import: library

  autogen-modules: Paths_monadoc
  exposed-modules:
    Monadoc
    Monadoc.Data.Commit
    Monadoc.Data.Migrations
    Monadoc.Data.Options
    Monadoc.Data.Version
    Monadoc.Handler.Account
    Monadoc.Handler.Favicon
    Monadoc.Handler.GitHubCallback
    Monadoc.Handler.Index
    Monadoc.Handler.Logo
    Monadoc.Handler.LogOut
    Monadoc.Handler.Ping
    Monadoc.Handler.Robots
    Monadoc.Handler.Search
    Monadoc.Handler.Tachyons
    Monadoc.Handler.Throw
    Monadoc.Main
    Monadoc.Server.Application
    Monadoc.Server.Common
    Monadoc.Server.Main
    Monadoc.Server.Middleware
    Monadoc.Server.Router
    Monadoc.Server.Settings
    Monadoc.Server.Template
    Monadoc.Type.App
    Monadoc.Type.Binary
    Monadoc.Type.Cabal.ModuleName
    Monadoc.Type.Cabal.PackageName
    Monadoc.Type.Cabal.Version
    Monadoc.Type.Cabal.VersionRange
    Monadoc.Type.Config
    Monadoc.Type.ConfigResult
    Monadoc.Type.Context
    Monadoc.Type.Etag
    Monadoc.Type.GitHub.Login
    Monadoc.Type.GitHub.User
    Monadoc.Type.GitHub.UserId
    Monadoc.Type.Guid
    Monadoc.Type.Migration
    Monadoc.Type.MigrationMismatch
    Monadoc.Type.NotFoundException
    Monadoc.Type.Path
    Monadoc.Type.Revision
    Monadoc.Type.Route
    Monadoc.Type.Service
    Monadoc.Type.Sha256
    Monadoc.Type.Size
    Monadoc.Type.TestException
    Monadoc.Type.Timestamp
    Monadoc.Type.Url
    Monadoc.Type.User
    Monadoc.Type.WithCallStack
    Monadoc.Utility.Cabal
    Monadoc.Utility.Console
    Monadoc.Utility.Ghc
    Monadoc.Utility.Sql
    Monadoc.Utility.Time
    Monadoc.Utility.Utf8
    Monadoc.Worker.Main
  hs-source-dirs: src/lib
  other-modules: Paths_monadoc

executable monadoc
  import: executable

  hs-source-dirs: src/exe
  main-is: Main.hs

test-suite test
  import: executable

  build-depends: hspec >= 2.7.1 && < 2.8
  hs-source-dirs: src/test
  main-is: Main.hs
  other-modules:
    Monadoc.Data.CommitSpec
    Monadoc.Data.MigrationsSpec
    Monadoc.Data.OptionsSpec
    Monadoc.Data.VersionSpec
    Monadoc.Handler.AccountSpec
    Monadoc.Handler.FaviconSpec
    Monadoc.Handler.GitHubCallbackSpec
    Monadoc.Handler.IndexSpec
    Monadoc.Handler.LogoSpec
    Monadoc.Handler.LogOutSpec
    Monadoc.Handler.PingSpec
    Monadoc.Handler.RobotsSpec
    Monadoc.Handler.SearchSpec
    Monadoc.Handler.TachyonsSpec
    Monadoc.Handler.ThrowSpec
    Monadoc.MainSpec
    Monadoc.Server.ApplicationSpec
    Monadoc.Server.CommonSpec
    Monadoc.Server.MainSpec
    Monadoc.Server.MiddlewareSpec
    Monadoc.Server.RouterSpec
    Monadoc.Server.SettingsSpec
    Monadoc.Server.TemplateSpec
    Monadoc.Type.AppSpec
    Monadoc.Type.BinarySpec
    Monadoc.Type.Cabal.ModuleNameSpec
    Monadoc.Type.Cabal.PackageNameSpec
    Monadoc.Type.Cabal.VersionRangeSpec
    Monadoc.Type.Cabal.VersionSpec
    Monadoc.Type.ConfigResultSpec
    Monadoc.Type.ConfigSpec
    Monadoc.Type.ContextSpec
    Monadoc.Type.EtagSpec
    Monadoc.Type.GitHub.LoginSpec
    Monadoc.Type.GitHub.UserIdSpec
    Monadoc.Type.GitHub.UserSpec
    Monadoc.Type.GuidSpec
    Monadoc.Type.MigrationMismatchSpec
    Monadoc.Type.MigrationSpec
    Monadoc.Type.NotFoundExceptionSpec
    Monadoc.Type.PathSpec
    Monadoc.Type.RevisionSpec
    Monadoc.Type.RouteSpec
    Monadoc.Type.ServiceSpec
    Monadoc.Type.Sha256Spec
    Monadoc.Type.SizeSpec
    Monadoc.Type.TestExceptionSpec
    Monadoc.Type.TimestampSpec
    Monadoc.Type.UrlSpec
    Monadoc.Type.UserSpec
    Monadoc.Type.WithCallStackSpec
    Monadoc.Utility.CabalSpec
    Monadoc.Utility.ConsoleSpec
    Monadoc.Utility.GhcSpec
    Monadoc.Utility.SqlSpec
    Monadoc.Utility.TimeSpec
    Monadoc.Utility.Utf8Spec
    Monadoc.Worker.MainSpec
    MonadocSpec
  type: exitcode-stdio-1.0
